# mqtt2postgres

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  config.toml.example  docker-compose.yml  rustfmt.toml
example/: docker-compose.yml
example/grafana/: grafana.env
example/grafana/dashboards/: dasboard.json
example/grafana/provisioning/datasources/: datasource.yml
src/: error.rs  helpers.rs  main.rs  vars.rs
src/config/: mod.rs
src/query/: create_table.rs  insert_record.rs  mod.rs  pg_datatype.rs
