[package]
name = "mqtt2postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bytes = "1.8.0"
pretty_env_logger = "0.5.0"
rumqttc = "0.24.0"
serde_json = "1.0.133"
slugify = "0.1.0"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["rt", "macros", "io-util", "net", "time"] }
tokio-postgres = "0.7.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.215", features = ["derive"] }
toml = { package = "basic-toml", version = "0.1" }
